# bankruptcy_bsl

./: .gitignore  .litellm_prompt_cache.db  RiskIntel_Architecture_and_User_Journey_with_ML.docx  app.py  check_large_cache.py  cli.py  config.py  data.db  db_builder.py  forecasting_engine.py  generate_ppt.py  insights_generator.py  logger_config.py  pyproject.toml  query_box.py  query_box2.py  requirements.txt  schema.json  vectorless_rag.py  vectorless_sql_generator.py
.streamlit/: config.toml
Backup_post demo_6June/: .gitignore  .langchain_cache.db  .litellm_prompt_cache.db  app.py  config.py  query_box.py  requirements.txt
Backup_post demo_6June/backup-15-june/: app.py  query_box.py
Backup_post demo_6June/data/: notification2_synthesized_1000.csv
New folder/: .gitignore  app.py  config.py  query_box.py  requirements.txt  sample_data.csv
New folder/data/backup_10k/: notification2_synthesized_final.csv
backup01-june/: app copy 2.py  app.py  config copy.py  insights_generator.py
data/: notification2_synthesized_final.xlsx
vl_rag/: __init__.py  config.py  insights_generator.py  schema.json  vectorless_rag.py  vectorless_sql_generator.py
