[project]
name = "bankruptcy4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.90",
    "langchain>=0.0.500",
    "langchain-litellm>=0.0.5",
    "langchain-community>=0.0.15",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pypi-json>=0.5.0.post1",
    "pysqlite3>=0.6.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "traceback2>=1.4.0",
    "tiktoken>=0.13.0",
    "litellm>=1.87.0",
    "pip>=26.1.2",
    "scikit-learn>=1.9.0",
]
